// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render expense list with empty messagee 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item__message"
    >
      <span>
        No expenses
      </span>
    </div>
  </div>
</div>
`;

exports[`Should render expense list with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <Connect(ExpenseListItem)
      amount={100}
      createdAt={0}
      description="Bill"
      id="1"
      key="1"
      note=""
    />
    <Connect(ExpenseListItem)
      amount={122000}
      createdAt={345600000}
      description="Rent"
      id="2"
      key="2"
      note=""
    />
    <Connect(ExpenseListItem)
      amount={1020000}
      createdAt={-345600000}
      description="Credit card"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;
